# memoryprojApril

april_version_code/: README.md  pyproject.toml  requirements.lock.txt
april_version_code/data/derived/support_only/: support_only_q100_manydocs.manifest.json  support_only_q100_manydocs_selected_qids.json  support_only_q50_manydocs.manifest.json
april_version_code/scripts/: _script_utils.py  grade_run.py  run_docsummaryaux_merge2.py  run_prose_bestofn_merge.py  run_prose_merge2.py  run_prose_oracle_bestofmany.py  run_prose_oracle_bestofmany_single_layer1.py  run_rlm_promptdocs_from_docsummaryaux.py  run_structured_merge2.py
april_version_code/src/april_version_code/: __init__.py
april_version_code/src/april_version_code/common/: __init__.py  grading.py  llm_backends.py  metadata.py  prompts.py  token_utils.py
april_version_code/src/april_version_code/data/: __init__.py  build_support_only_q100.py  build_support_only_q50.py
april_version_code/src/april_version_code/methods/: __init__.py  _rlm_docpair_filesystem_from_docsummaryaux.py  cluster_bank_core.py  docsummaryaux_merge2.py  prose_bestofn_core.py  prose_merge2.py  rlm_docsummaryaux_helpers.py  rlm_official_core.py  rlm_promptdocs_from_docsummaryaux.py  stream_oracle_assisted_dynamic_bank_with_summary.py  stream_oracle_assisted_dynamic_cluster_bank.py  stream_oracle_memory.py  structured_merge2.py
exact_pipeline/: README.md  USAGE.md  best_of_many.py  cluster_bank.py  layer1_merge.py  llm_backends.py  metrics.py  run_gem_full.sh  run_gem_l1bon_nomerge.sh  run_gem_nobon.sh  run_gem_s1.sh  run_pipeline.py  (+6 more)
(+42 files in other folders)
